--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -80,15 +80,9 @@
   opacity: 0.8;
 }
 
-@media screen and (max-width: 1140px) {
-  .cover__item {
-    min-height: 740px;
-  }
-}
-
-@media screen and (max-width: 984px) {
-  .cover__item {
-    min-height: 740px;
+@media screen and (max-width: 568px) {
+  .cover {
+    padding: 64px 0 64px;
   }
 }
 
@@ -110,8 +104,6 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.14;
-    text-align: center;
-    margin: 0;
   }
 }
 
