--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,8 @@
-.footer {
+.footer__text {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.14;
+  margin: 0 auto 24px auto;
   font-size: 14px;
   text-align: center;
-  margin: 0 auto 24px auto;
 }
